feat: base logic

feat: pre auth


feat: partial flow
